force-app/main/default/objects/Payee__c/Payee__c.object-meta.xml
<CustomObject>
    <description>Used to capture data for Payee information related to a case and liability</description>
    <label>Payee</label>
    <nameField>
        <displayFormat>P-{000000}</displayFormat>
        <label>Payee ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Payees</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>