force-app/main/default/objects/Payee__c/fields/BOFE_19_V_L__c.field-meta.xml
<CustomField>
    <fullName>BOFE_19_V_L__c</fullName>
    <formula>"&amp;id=" + Id +
"&amp;queryid=[PayeeInfo]a0md0000008uSKgAAM?pv0=" + Id + ",[Office]a0md00000064cjJ?pv0=" + $User.Id + ",[BOFEOffice]a0md00000064cjO?pv0=" + Case_Management__r.Id + ",[Employer]a0md00000064cj8?pv0=" + Case_Management__r.Id + ",[Governor]a0md0000003l2S0" + 
"&amp;templategroup=Payee" + 
"&amp;ofn={Template.Label} " + Case_Role__c +
"&amp;sc0=1" +
"&amp;sc1=Attachments" +
"&amp;qmode=Download" +
"&amp;templateid=a0nt0000001b509"</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>BOFE 19 V.L.</label>
    <type>Text</type>
</CustomField>