force-app/main/default/objects/Payee__c/fields/Case_Management__c.field-meta.xml
<CustomField>
    <fullName>Case_Management__c</fullName>
    <description>M/D to the Case Management object</description>
    <label>Case Management</label>
    <referenceTo>DIR_Case__c</referenceTo>
    <relationshipLabel>Payees</relationshipLabel>
    <relationshipName>Payees</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>