force-app/main/default/objects/Payee__c/fields/DIR_Office__c.field-meta.xml
<CustomField>
    <fullName>DIR_Office__c</fullName>
    <formula>Case_Management__r.Office__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>DIR Office</label>
    <type>Text</type>
</CustomField>