force-app/main/default/objects/Payee__c/fields/Factor__c.field-meta.xml
<CustomField>
    <fullName>Factor__c</fullName>
    <description>The sum of all Payees of a particular Payee_Type__c must equal 100.00000</description>
    <label>Factor</label>
    <precision>8</precision>
    <scale>5</scale>
    <type>Number</type>
</CustomField>