force-app/main/default/objects/Payee__c/fields/Generate_Documents__c.field-meta.xml
<CustomField>
    <fullName>Generate_Documents__c</fullName>
    <formula>"&amp;id=" + Id +
"&amp;QueryId=[Governor]a0md0000003l2S0" +
"&amp;QueryId=[PayeeInfo]a0md0000008uSKgAAM?pv0=" + Id +
"&amp;templategroup=Payee" +
"&amp;ofn={Template.Label} " + Case_Role__c +
"&amp;sc0=1" +
"&amp;sc1=Attachments" +
"&amp;qmode=Download" +
"&amp;templateid=a0nd0000007MiKd"</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Generate Documents</label>
    <type>Text</type>
</CustomField>