force-app/main/default/objects/Payee__c/fields/GrossWages__c.field-meta.xml
<CustomField>
    <fullName>GrossWages__c</fullName>
    <description>value imported from form 40 import process</description>
    <label>Gross Wages Assessed</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>