force-app/main/default/objects/Payee__c/fields/Interest_Other_Payable_Balance__c.field-meta.xml
<CustomField>
    <fullName>Interest_Other_Payable_Balance__c</fullName>
    <description>Sum of all child Payment Records that have not been batched under a Warrant and Payment_Applied_To != 'Wages', 'Wage Interest', or 'Penalties'.</description>
    <label>Interest/Other Payable Balance</label>
    <summarizedField>Payment_Record__c.Payment_Amount__c</summarizedField>
    <summaryFilterItems>
        <field>Payment_Record__c.Payment_Applied_To__c</field>
        <operation>notEqual</operation>
        <value>Penalties</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>Payment_Record__c.Payment_Applied_To__c</field>
        <operation>notEqual</operation>
        <value>Wages</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>Payment_Record__c.Payment_Applied_To__c</field>
        <operation>notEqual</operation>
        <value>Wage Interest</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>Payment_Record__c.Batched_Under_Warrant__c</field>
        <operation>equals</operation>
        <value>False</value>
    </summaryFilterItems>
    <summaryForeignKey>Payment_Record__c.Payee__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>