force-app/main/default/objects/Payee__c/fields/Latest_Receipt_Hold_Date__c.field-meta.xml
<CustomField>
    <fullName>Latest_Receipt_Hold_Date__c</fullName>
    <description>The most recent Receipt Hold Date on the child Payment Records. Funds can't be disbursed if this date is in the future.</description>
    <label>Latest Receipt Hold Date</label>
    <summarizedField>Payment_Record__c.Receipt_Hold_Date_New__c</summarizedField>
    <summaryForeignKey>Payment_Record__c.Payee__c</summaryForeignKey>
    <summaryOperation>max</summaryOperation>
    <type>Summary</type>
</CustomField>