force-app/main/default/objects/Payee__c/fields/NetWages__c.field-meta.xml
<CustomField>
    <fullName>NetWages__c</fullName>
    <description>value imported from form 40 import process</description>
    <label>Net Wages Assessed</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>