force-app/main/default/objects/Payee__c/fields/Release_Approved__c.field-meta.xml
<CustomField>
    <fullName>Release_Approved__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If a release is required before payment may be made to this payee, and that release is on file, check this box.</description>
    <inlineHelpText>If a release is required before payment may be made to this payee, and that release is on file, check this box.</inlineHelpText>
    <label>Release Approved</label>
    <type>Checkbox</type>
</CustomField>