force-app/main/default/objects/Payee__c/fields/Release_Required__c.field-meta.xml
<CustomField>
    <fullName>Release_Required__c</fullName>
    <label>Release Required</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Yes</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>