force-app/main/default/objects/Payee__c/fields/Sum_Of_All_Payment_Records__c.field-meta.xml
<CustomField>
    <fullName>Sum_Of_All_Payment_Records__c</fullName>
    <description>Not on layout. Used in CashCalculatePrAmounts.cls to make sure Payees aren't overpaid.</description>
    <label>Sum Of All Payment Records</label>
    <summarizedField>Payment_Record__c.Payment_Amount__c</summarizedField>
    <summaryForeignKey>Payment_Record__c.Payee__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>