force-app/main/default/objects/Payee__c/fields/Sum_of_UWF_Payment_Records__c.field-meta.xml
<CustomField>
    <fullName>Sum_of_UWF_Payment_Records__c</fullName>
    <description>Used to generate UWF schedule.</description>
    <label>Sum of UWF Payment Records</label>
    <summarizedField>Payment_Record__c.Payment_Amount__c</summarizedField>
    <summaryFilterItems>
        <field>Payment_Record__c.Disbursement_Type__c</field>
        <operation>equals</operation>
        <value>Unpaid Wage Fund</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>Payment_Record__c.Batched_Under_Warrant__c</field>
        <operation>equals</operation>
        <value>True</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>Payment_Record__c.Warrant_Issued__c</field>
        <operation>equals</operation>
        <value>False</value>
    </summaryFilterItems>
    <summaryForeignKey>Payment_Record__c.Payee__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>