force-app/main/default/objects/Payee__c/fields/TotalDeductions__c.field-meta.xml
<CustomField>
    <fullName>TotalDeductions__c</fullName>
    <description>value imported from form 40 import process</description>
    <label>Deductions: Total</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>