force-app/main/default/objects/Payee__c/fields/Verification_Letter_Sent__c.field-meta.xml
<CustomField>
    <fullName>Verification_Letter_Sent__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Used to track when verfication letter is sent to employee</description>
    <label>Verification Letter Sent</label>
    <type>Checkbox</type>
</CustomField>