force-app/main/default/objects/Payee__c/fields/Wage_Payable_Balance__c.field-meta.xml
<CustomField>
    <fullName>Wage_Payable_Balance__c</fullName>
    <label>Wage Payable Balance Old</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>