force-app/main/default/objects/Payee__c/fields/Wage_Payable_Balance_New__c.field-meta.xml
<CustomField>
    <fullName>Wage_Payable_Balance_New__c</fullName>
    <description>Sum of all child Payment Records that have not been batched under a Warrant and Payment_Applied_To = 'Wages'.</description>
    <label>Wage Payable Balance</label>
    <summarizedField>Payment_Record__c.Payment_Amount__c</summarizedField>
    <summaryFilterItems>
        <field>Payment_Record__c.Payment_Applied_To__c</field>
        <operation>equals</operation>
        <value>Wages</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>Payment_Record__c.Batched_Under_Warrant__c</field>
        <operation>equals</operation>
        <value>False</value>
    </summaryFilterItems>
    <summaryForeignKey>Payment_Record__c.Payee__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>