force-app/main/default/objects/Payee__c/fields/WageAssessment__c.field-meta.xml
<CustomField>
    <fullName>WageAssessment__c</fullName>
    <description>value imported from form 40 import process</description>
    <label>Total Wage Assessment</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>