force-app/main/default/objects/Payee__c/validationRules/Payee_deceased.validationRule-meta.xml
<ValidationRule>
    <fullName>Payee_deceased</fullName>
    <active>true</active>
    <description>If 'Payee Heir or Successor' checkbox is checked, the 'Name of Heir or Successor' field must be filled, and vice versa.</description>
    <errorConditionFormula>OR(
AND( 
Payee_Heir_or_Successor__c, 
ISBLANK( Name_of_Heir_or_Successor__c ) 
),
AND(
NOT(Payee_Heir_or_Successor__c), 
NOT(ISBLANK(Name_of_Heir_or_Successor__c)) 
) 
)</errorConditionFormula>
    <errorMessage>If 'Payee Heir or Successor' checkbox is checked, the 'Name of Heir or Successor' field must be filled, and vice versa.</errorMessage>
</ValidationRule>