force-app/main/default/objects/Payee__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Case_Management__c</columns>
    <columns>DIR_Office__c</columns>
    <columns>Payee_Name__c</columns>
    <columns>Payee_Type__c</columns>
    <columns>Factor__c</columns>
    <columns>Status__c</columns>
    <columns>Verification_Letter_Sent_Date__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>Wage_Payable_Balance_New__c</columns>
    <columns>Wage_Interest_Payable_Balance__c</columns>
    <columns>Penalty_Payable_Balance_New__c</columns>
    <columns>Interest_Other_Payable_Balance__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>