force-app/main/default/objects/Payee__c/listViews/All_Payees_for_a_Case.listView-meta.xml
<ListView>
    <fullName>All_Payees_for_a_Case</fullName>
    <columns>NAME</columns>
    <columns>Case_Management__c</columns>
    <columns>DIR_Office__c</columns>
    <columns>Payee_Name__c</columns>
    <columns>Verification_Letter_Sent__c</columns>
    <columns>Payee_Type__c</columns>
    <columns>Status__c</columns>
    <columns>Verification_Letter_Sent_Date__c</columns>
    <columns>Wage_Payable_Balance_New__c</columns>
    <columns>Wage_Interest_Payable_Balance__c</columns>
    <columns>Penalty_Payable_Balance_New__c</columns>
    <columns>Interest_Other_Payable_Balance__c</columns>
    <columns>Recycled_Funds__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Case_Management__c</field>
        <operation>equals</operation>
        <value>CM-822222</value>
    </filters>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Verified</value>
    </filters>
    <label>All Payees for a Case</label>
</ListView>