force-app/main/default/objects/Payee__c/listViews/Payees_owed_Bakersfield.listView-meta.xml
<ListView>
    <fullName>Payees_owed_Bakersfield</fullName>
    <booleanFilter>(1 OR 2 OR 3 OR 5 OR 6) AND 4</booleanFilter>
    <columns>NAME</columns>
    <columns>Case_Management__c</columns>
    <columns>DIR_Office__c</columns>
    <columns>Payee_Name__c</columns>
    <columns>Payee_Type__c</columns>
    <columns>Status__c</columns>
    <columns>Verification_Letter_Sent__c</columns>
    <columns>Release_Required__c</columns>
    <columns>Wage_Payable_Balance_New__c</columns>
    <columns>Wage_Interest_Payable_Balance__c</columns>
    <columns>Penalty_Payable_Balance_New__c</columns>
    <columns>Interest_Other_Payable_Balance__c</columns>
    <columns>Recycled_Funds__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Wage_Interest_Payable_Balance__c</field>
        <operation>greaterThan</operation>
        <value>0</value>
    </filters>
    <filters>
        <field>Interest_Other_Payable_Balance__c</field>
        <operation>greaterThan</operation>
        <value>0</value>
    </filters>
    <filters>
        <field>Penalty_Payable_Balance_New__c</field>
        <operation>greaterThan</operation>
        <value>0</value>
    </filters>
    <filters>
        <field>DIR_Office__c</field>
        <operation>equals</operation>
        <value>Bakersfield WCA</value>
    </filters>
    <filters>
        <field>Wage_Payable_Balance_New__c</field>
        <operation>greaterThan</operation>
        <value>0</value>
    </filters>
    <filters>
        <field>Recycled_Funds__c</field>
        <operation>greaterThan</operation>
        <value>0</value>
    </filters>
    <label>Payees owed Bakersfield</label>
    <language>en_US</language>
</ListView>